position fixed on mobile navbar

--- a/styles.css
+++ b/styles.css
@@ -98,7 +98,7 @@ section {
     height: calc(var(--app-height) - 4.8rem);
     justify-content: space-around;
     margin: 0;
-    position: absolute;
+    position: fixed;
     right: 0;
     text-align: right;
     transform: translateX(100%);
